--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "server" : "node server/index.js", 
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -10,8 +11,12 @@
   },
   "dependencies": {
     "apexcharts": "^3.36.3",
+    "async": "^3.2.4",
     "core-js": "2.6.5",
     "d3": "^7.6.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.1",
     "nuxt": "^2.2.0",
     "nuxt-buefy": "^0.4.24",
     "vue": "^2.7.10",
