--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "server": "node server/index.js",
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "start": "node server/index.js",
     "generate": "nuxt generate"
   },
