major updates to interface, analytics and security

--- a/package.json
+++ b/package.json
@@ -13,19 +13,28 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "aes-js": "^3.1.2",
     "apexcharts": "^3.36.3",
+    "arima": "^0.2.5",
+    "arima-ts": "^0.0.1",
     "async": "^3.2.4",
     "core-js": "2.6.5",
     "d3": "^7.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "md5": "^2.3.0",
     "mongoose": "^6.7.1",
+    "node-fetch": "^2.6.7",
     "nuxt": "^2.2.0",
     "nuxt-buefy": "^0.4.24",
+    "simple": "^0.2.0",
+    "simple-statistics": "^7.8.3",
+    "statistics": "^3.3.0",
     "timeseries-analysis": "^1.0.12",
     "vue": "^2.7.10",
     "vue-apexcharts": "^1.6.2",
     "vue-server-renderer": "^2.7.10",
+    "vue-slider-component": "^3.2.24",
     "vue-template-compiler": "^2.7.10",
     "vue2-highcharts": "^1.2.5"
   },
