--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "^7.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "md5": "^2.3.0",
     "mongoose": "^6.7.1",
     "node-fetch": "^2.6.7",
