--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.7",
     "nuxt": "^2.2.0",
     "nuxt-buefy": "^0.4.24",
+    "serialport": "^10.5.0",
     "simple": "^0.2.0",
     "simple-statistics": "^7.8.3",
     "statistics": "^3.3.0",
