--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "arima-ts": "^0.0.1",
     "async": "^3.2.4",
     "core-js": "2.6.5",
+    "crypto-js": "^4.1.1",
     "d3": "^7.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
